2008-08-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/AsxPlaylistFormat.cs:
	Another patch from Félix Velasco, this time to fix the parsing of ASX 
	playlists (BGO #545646).

2008-08-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs:
	Patch from Félix Velasco to select the proper source when showing the radio
	station editor (BGO #539397).

2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackFilterListView.cs:
	Enable dragging filter items (artists/albums/etc) the same as you would
	drag tracks - onto the play queue, etc (BGO #524418).

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView_DragAndDrop.cs:
	Check where the drag came from, and if it wasn't directly from the track
	view, assume it was from a filter view, and add everything in the track
	model to the drop destination instead of just the user-selected items.

	* src/Core/Banshee.Core/Resources/translators.xml: Updated

2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Factor out activate-selection code into protected method.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Handle 'o' the same as enter - activate the row(s), which starts playing
	them.

	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: Update links to
	the website.

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Update
	copyright.

	* src/Core/Banshee.Services/Banshee.Library/ThreadPoolImportSource.cs:
	Make sure errors are reported on the main thread, avoid hanging when
	importing from Amarok.

2008-08-04  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Metadata.FileSystem/FileSystemQueryJob.cs: